<resources>
    <string name="app_name">SSB Bank</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">WelCome To SSB Bank</string>
    <string name="userName">Username</string>
    <string name="accountNumber">Account Number</string>
    <string name="customerId">Customer Id</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="easyPin">Easy PIN</string>
    <string name="password">Password</string>
    <string name="securityPin">Security PIN : </string>
    <string name="pin"> **** </string>
    <string name="setPassword">Set Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="titleSetUsername">Please set Username and Password </string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">SSB Bank</string>
    <string name="username_colon">Username : </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hi">Hi</string>
    <string name="welcomeNote">Welcome To SSB Bank Demo Application</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="fullName">Full Name: </string>
    <string name="space"> </string>
    <string name="accountNumber_col">Account Number: </string>
    <string name="select_dates">Select Dates:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ViewTransactions">View Transactions</string>
    <string name="date_remarks">Date/Remarks</string>
    <string name="amount_INR">Amount(INR) </string>
    <string name="avl_bal">Available Balance: </string>
    <string name="account_type_col">Account Type: </string>
    <string name="IFSC_Code_col">IFSC Code: </string>
    <string name="SSB_ifsc">SSBN0004444</string>
    <string name="bank_name_col">Bank Name: </string>
    <string name="ssb_branch_name">Estanicia,Guduvanchery</string>
    <string name="branch_name_col">Branch Name: </string>
    <string name="ss_bank">SS Bank</string>
    <string name="ben_full_name">Beneficiary Full Name</string>
    <string name="ben_nick_name">Beneficiary Nick Name</string>
    <string name="confirm_account_num">Confirm Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="add_ben">Add Beneficiary</string>
    <string name="ben_name_col">Beneficiary Full Name: </string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="amount_col">Amount: </string>
    <string name="purpose_col">Purpose: </string>
    <string name="from_account_num">From Account Number: </string>
    <string name="current_bal">Current Balance: </string>
    <string name="merchant_name_col">Merchant Name: </string>
    <string name="order_num">Order Number: </string>
    <string name="payNow">Pay Now</string>
    <string name="ben_nick_name_col">Beneficiary Nick Name: </string>
</resources>

