<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/fullName" />

            <TextView
                android:id="@+id/account_summary_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/accountNumber_col" />

            <TextView
                android:id="@+id/account_number_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/account_type_col" />

            <TextView
                android:id="@+id/account_type_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/IFSC_Code_col" />

            <TextView
                android:id="@+id/ifsc_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/SSB_ifsc" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/bank_name_col" />

            <TextView
                android:id="@+id/bank_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/branch_name_col" />

            <TextView
                android:id="@+id/branch_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/ssb_branch_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/avl_bal" />

            <TextView
                android:id="@+id/avl_bal_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>