<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/padding_left"
    android:paddingRight="@dimen/padding_right"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/fullName" />

        <TextView
            android:id="@+id/inter_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/space" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/accountNumber_col" />

        <TextView
            android:id="@+id/inter_account_number_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/space" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/IFSC_Code_col" />

        <TextView
            android:id="@+id/inter_ifsc_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/space" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/amount_col" />

        <TextView
            android:id="@+id/inter_amount_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/space" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/purpose_col" />

        <TextView
            android:id="@+id/inter_purpose_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top"
            android:text="@string/space" />

    </LinearLayout>
    <RelativeLayout
        android:paddingBottom="@dimen/padding_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:textSize="15sp"
            android:id="@+id/inter_edit_button_view"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingEnd="@dimen/padding_end"
            android:paddingRight="@dimen/padding_right"
            android:paddingLeft="@dimen/padding_left"
            android:paddingStart="@dimen/padding_start"
            android:background="@drawable/riffle_effect_for_buttons"
            android:textColor="@android:color/white"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/margin_start"
            android:layout_marginLeft="32dp"
            android:clickable="true"
            android:text="@string/edit" />

        <Button
            android:textSize="15sp"
            android:id="@+id/inter_confirm_button_view"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:paddingEnd="@dimen/padding_end"
            android:paddingRight="@dimen/padding_right"
            android:paddingLeft="@dimen/padding_left"
            android:paddingStart="@dimen/padding_start"
            android:background="@drawable/riffle_effect_for_buttons"
            android:textColor="@android:color/white"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="@dimen/margin_start"
            android:layout_marginRight="32dp"
            android:clickable="true"
            android:text="@string/confirm" />

    </RelativeLayout>
</LinearLayout>
</ScrollView>