<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/ben_full_name" />

            <TextView
                android:id="@+id/quick_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/accountNumber_col" />

            <TextView
                android:id="@+id/quick_account_number_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/amount_col" />

            <TextView
                android:id="@+id/quick_amount_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/purpose_col" />

            <TextView
                android:id="@+id/quick_purpose_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <RelativeLayout
            android:paddingBottom="@dimen/padding_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:textSize="15sp"
                android:id="@+id/quick_edit_button_view"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="16dp"
                android:background="@drawable/riffle_effect_for_buttons"
                android:clickable="true"
                android:paddingEnd="@dimen/padding_end"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:paddingStart="@dimen/padding_start"
                android:text="@string/edit"
                android:textColor="@android:color/white" />

            <Button
                android:textSize="15sp"
                android:id="@+id/quick_confirm_button_view"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginTop="16dp"
                android:background="@drawable/riffle_effect_for_buttons"
                android:clickable="true"
                android:paddingEnd="@dimen/padding_end"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:paddingStart="@dimen/padding_start"
                android:text="@string/confirm"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>