<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/ben_nick_name_col" />

            <TextView
                android:id="@+id/ben_nick_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/ben_name_col" />

            <TextView
                android:id="@+id/ben_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/accountNumber_col" />

            <TextView
                android:id="@+id/ben_account_number_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/IFSC_Code_col" />

            <TextView
                android:id="@+id/ben_ifsc_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>
<LinearLayout
    android:id="@+id/ifsc_data_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/bank_name_col" />

            <TextView
                android:id="@+id/ben_bank_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/branch_name_col" />

            <TextView
                android:id="@+id/ben_branch_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingTop="@dimen/padding_top"
                android:text="@string/space" />

        </LinearLayout>
</LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar_ben"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/confirm_add_ben_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="32dp">

            <Button
                android:id="@+id/edit_button_view"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="start"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/riffle_effect_for_buttons"
                android:clickable="true"
                android:paddingEnd="@dimen/padding_end"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:paddingStart="@dimen/padding_left"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/confirm_button_view"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/riffle_effect_for_buttons"
                android:clickable="true"
                android:paddingEnd="@dimen/padding_end"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"
                android:paddingStart="@dimen/padding_left"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>